--- a/my_styles/styling.css
+++ b/my_styles/styling.css
@@ -165,7 +165,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 15rem;
+  padding-left: 12rem;
   margin-top: -3rem;
 }
 .header-wrapper .left-header .name {
@@ -183,16 +183,16 @@ section {
 
 /*--------------about-page----------------*/
 .about-wrapper {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding-top: 3.5rem;
-  padding-bottom: 5rem;
+  grid-gap: 5rem;
 }
 .about-wrapper .right-about {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin-top: 3rem;
-  margin-left: 3rem;
+  margin-top: 1.5rem;
+  margin-right: -15rem;
   grid-gap: 2rem;
 }
 .about-wrapper .right-about .about-con {
@@ -224,8 +224,8 @@ section {
   letter-spacing: 2px;
 }
 .about-wrapper .left-about {
-  margin: 3rem -5rem;
-  padding-right: 5rem;
+  margin-top: 5rem;
+  margin-left: -5rem;
 }
 .about-wrapper .left-about .main-title {
   text-align: left;
@@ -239,16 +239,15 @@ section {
 .about-wrapper .left-about .main-title h2 span {
   color: var(--color-blue);
 }
-.about-wrapper .left-about p {
+.about-wrapper .left-about .main-title p {
   line-height: 2rem;
   padding: 1rem;
   color: var(--color-white);
-  text-align: inherit;
+  text-align: left;
 }
 
 .about-stats {
   margin-left: -5rem;
-  margin-top: -5rem;
   padding-bottom: 4rem;
 }
 .about-stats .progress-bars {
@@ -305,7 +304,7 @@ section {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 2rem;
-  text-align: center;
+  text-align: left;
   padding: 3rem 0;
   position: relative;
 }
@@ -368,6 +367,7 @@ section {
 .btn-con {
   display: flex;
   align-self: flex-start;
+  margin-top: 1.5rem;
 }
 
 .main-btn {
