--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -159,7 +159,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 15rem;
+    padding-left: 12rem;
     margin-top: -3rem;
   .name {
     margin: 0;
@@ -178,15 +178,15 @@
 
   /*--------------about-page----------------*/
   .about-wrapper{
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding-top: 3.5rem;
-    padding-bottom: 5rem;
+    grid-gap: 5rem;
     .right-about{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        margin-top: 3rem;
-        margin-left: 3rem;
+        margin-top: 1.5rem;
+        margin-right: -15rem;;
         grid-gap: 2rem;
         .about-con{
             border: 1px solid var(--color-grey);
@@ -220,8 +220,8 @@
         }
     
     .left-about{
-      margin: 3rem -5rem;
-      padding-right: 5rem;
+      margin-top: 5rem;
+      margin-left: -5rem;
         .main-title{
             text-align: left;
             h2{
@@ -233,19 +233,18 @@
                     color: var(--color-blue);
                 }
             }
-        }
         p{
             line-height: 2rem;
             padding: 1rem;
             color: var(--color-white);
-            text-align: inherit;
+            text-align: left;
         }
-        
+      }
 }
 }
 .about-stats{
     margin-left: -5rem;
-    margin-top: -5rem;
+    
     padding-bottom: 4rem;
     .progress-bars{
         display: grid;
@@ -301,7 +300,7 @@
     text-transform: uppercase;
     font-weight: 500;
     font-size: 2rem;
-    text-align: center;
+    text-align: left;
     padding: 3rem 0;
     position: relative;
     span{
@@ -365,6 +364,7 @@ textarea{
 .btn-con{
     display: flex;
     align-self: flex-start;
+    margin-top: 1.5rem;
 }
 
 .main-btn{
