--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -56,7 +56,7 @@
   .home-section,
   .bar-section,
   .about-section,
-  .portfolio-section,
+  .project-section,
   .contact-section {
     display: none;
     transform: translateY(0) scale(1);
@@ -185,7 +185,7 @@
     .right-about{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        margin-top: 1.5rem;
+        margin-top: 5rem;
         margin-right: -15rem;;
         grid-gap: 2rem;
         .about-con{
@@ -316,6 +316,65 @@
     }
 }
 
+/*--------------projects-page----------------*/
+.project-wrapper{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5rem;
+    left-project{
+      margin-top: 5rem;
+      margin-left: -5rem;
+        .main-title{
+            text-align: left;
+            h2{
+                position: relative;
+                text-transform: uppercase;
+                font-size: 3rem;
+                color: var(--color-white);
+                span{
+                    color: var(--color-blue);
+                }
+            }
+        p{
+            line-height: 2rem;
+            padding: 1rem;
+            color: var(--color-white);
+            text-align: left;
+        }
+      }
+}
+.right-project{ 
+  display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 5rem;
+        margin-right: -15rem;;
+        grid-gap: 2rem;
+  .img{
+    overflow: hidden;
+    object-fit: cover;
+    border: 1px solid var(--color-grey);
+    border-radius: 5px;
+    margin-left: 8rem;
+    background-color: var(--color-grey);
+    transition: all .4s ease-in-out;
+    &:hover{
+      cursor: default;
+      transform: translateY(-5px);
+      border: 1px solid var(--color-grey2);
+  }
+   img {
+    width: 100%;
+    height: auto;
+    
+    transition: all .4s ease-in-out;
+    filter: grayscale(100%);
+    &:hover {
+      filter: grayscale(0);
+    }
+  }
+  }
+}
+}
 /*--------------contact-page----------------*/
 .contact-wrapper {
   display: flex;
