--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -54,7 +54,6 @@
     background-color: var(--color-primary);
   }
   .home-section,
-  .bar-section,
   .about-section,
   .project-section,
   .contact-section {
@@ -159,8 +158,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 12rem;
-    margin-top: -3rem;
+    padding-left: 14rem;
+    margin-top: 3rem;
   .name {
     margin: 0;
     padding: 0;
@@ -178,7 +177,6 @@
 
   /*--------------about-page----------------*/
   .about-wrapper{
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 5rem;
@@ -221,10 +219,9 @@
     
     .left-about{
       margin-top: 5rem;
-      margin-left: -5rem;
-        .main-title{
-            text-align: left;
-            h2{
+      margin-left: -4rem;
+            h1{
+              text-align: left;
                 position: relative;
                 text-transform: uppercase;
                 font-size: 3rem;
@@ -234,13 +231,12 @@
                 }
             }
         p{
-            line-height: 2rem;
-            padding: 1rem;
+          margin: 1.5rem 0;
+          line-height: 2rem;
             color: var(--color-white);
             text-align: left;
         }
       }
-}
 }
 .about-stats{
     margin-left: -5rem;
@@ -282,15 +278,19 @@
                         width: 80%;
                     }
                     .css, 
-                    html {
+                    .html {
                         width: 90%;
                     }
-                    .javascript{
+                    .javascript,
+                    .jquery {
                         width: 70%;
                     }
                     .react{
                         width: 60%;
                     }
+                    .redux{
+                      width: 50%;
+                  }
                 }
             }
         }
@@ -324,9 +324,8 @@
     left-project{
       margin-top: 5rem;
       margin-left: -5rem;
-        .main-title{
-            text-align: left;
-            h2{
+            h1{
+              text-align: left;
                 position: relative;
                 text-transform: uppercase;
                 font-size: 3rem;
@@ -341,31 +340,28 @@
             color: var(--color-white);
             text-align: left;
         }
-      }
-}
+    }
 .right-project{ 
   display: grid;
         grid-template-columns: repeat(2, 1fr);
         margin-top: 5rem;
         margin-right: -15rem;;
         grid-gap: 2rem;
-  .img{
-    overflow: hidden;
-    object-fit: cover;
-    border: 1px solid var(--color-grey);
-    border-radius: 5px;
-    margin-left: 8rem;
-    background-color: var(--color-grey);
-    transition: all .4s ease-in-out;
-    &:hover{
-      cursor: default;
-      transform: translateY(-5px);
-      border: 1px solid var(--color-grey2);
-  }
+        .project-con{
+          position: relative;
+          border: 1px solid var(--color-grey);
+          border-radius: 5px;
+          transition: all .4s ease-in-out;
+          &:hover{
+              cursor: default;
+              transform: translateY(-5px);
+              border: 1px solid var(--color-grey2);
+          }
+      }
+      
    img {
     width: 100%;
     height: auto;
-    
     transition: all .4s ease-in-out;
     filter: grayscale(100%);
     &:hover {
@@ -374,7 +370,7 @@
   }
   }
 }
-}
+
 /*--------------contact-page----------------*/
 .contact-wrapper {
   display: flex;
