--- a/my_styles/styling.css
+++ b/my_styles/styling.css
@@ -7,10 +7,10 @@
 }
 
 :root {
-  --color-primary: #000;
+  --color-primary: #343434;
   --color-secondary: #e3b39b;
   --color-blue: #00094B;
-  --color-white: #fff;
+  --color-white: #EDEADE;
   --color-grey: #2a2e35;
   --color-grey2: #42413f;
   --br-sm-2: 14px;
@@ -155,10 +155,10 @@ section {
   -o-object-fit: cover;
      object-fit: cover;
   transition: all 0.4s ease-in-out;
-  filter: grayscale(100%);
+  filter: grayscale(0);
 }
 .header-wrapper .right-header .img img:hover {
-  filter: grayscale(0);
+  filter: grayscale(100%);
 }
 .header-wrapper .left-header {
   display: flex;
@@ -170,21 +170,43 @@ section {
 .header-wrapper .left-header .name {
   margin: 0;
   padding: 0;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .header-wrapper .left-header .name span {
   color: var(--color-blue);
 }
-.header-wrapper .left-header .name p {
+.header-wrapper .left-header p {
   margin: 1.5rem 0;
-  line-height: 4rem;
+  line-height: 2rem;
 }
 
 /*--------------about-section----------------*/
 .about-wrapper {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5rem;
+  display: flex;
+  flex-direction: row;
+}
+.about-wrapper h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3rem;
+  color: var(--color-white);
+}
+.about-wrapper h1 span {
+  color: var(--color-blue);
+}
+.about-wrapper .left-about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: -5rem;
+  padding-left: -4rem;
+  margin-top: 3rem;
+}
+.about-wrapper .left-about p {
+  margin: 1.5rem 0;
+  line-height: 2rem;
+  color: var(--color-white);
+  text-align: left;
 }
 .about-wrapper .right-about {
   display: grid;
@@ -211,7 +233,7 @@ section {
   flex-direction: column;
 }
 .about-wrapper .right-about .abt-text .large-text {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .about-wrapper .right-about .abt-text .small-text {
   color: var(--color-secondary);
@@ -220,26 +242,6 @@ section {
   text-transform: uppercase;
   font-size: 1.2rem;
   letter-spacing: 2px;
-}
-.about-wrapper .left-about {
-  margin-top: 5rem;
-  margin-left: -4rem;
-}
-.about-wrapper .left-about h1 {
-  text-align: left;
-  position: relative;
-  text-transform: uppercase;
-  font-size: 3rem;
-  color: var(--color-white);
-}
-.about-wrapper .left-about h1 span {
-  color: var(--color-blue);
-}
-.about-wrapper .left-about p {
-  margin: 1.5rem 0;
-  line-height: 2rem;
-  color: var(--color-white);
-  text-align: left;
 }
 
 .about-stats {
@@ -302,7 +304,7 @@ section {
 
 .stats-title {
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 2rem;
   text-align: left;
   padding: 3rem 0;
@@ -322,32 +324,26 @@ section {
 
 /*--------------projects-section----------------*/
 .project-wrapper {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5rem;
+  display: flex;
 }
-.project-wrapper left-project {
-  margin-top: 5rem;
-  margin-left: -5rem;
-  float: left;
-}
-.project-wrapper left-project h1 {
-  text-align: left;
+.project-wrapper h1 {
+  text-align: center;
   position: relative;
   text-transform: uppercase;
   font-size: 3rem;
   color: var(--color-white);
 }
-.project-wrapper left-project h1 span {
+.project-wrapper h1 span {
   color: var(--color-blue);
 }
-.project-wrapper left-project p {
+.project-wrapper p {
   line-height: 2rem;
   padding: 1rem;
   color: var(--color-white);
   text-align: left;
 }
-.project-wrapper .right-project {
+
+.project-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-top: 5rem;
@@ -355,27 +351,28 @@ section {
   float: right;
   grid-gap: 2rem;
 }
-.project-wrapper .right-project .project-con {
+.project-container .project-con {
   position: relative;
   border: 1px solid var(--color-grey);
   border-radius: 5px;
   transition: all 0.4s ease-in-out;
 }
-.project-wrapper .right-project .project-con:hover {
+.project-container .project-con:hover {
   cursor: default;
   transform: translateY(-5px);
   border: 1px solid var(--color-grey2);
 }
-.project-wrapper .right-project img {
+.project-container img {
   width: 100%;
   height: auto;
   transition: all 0.4s ease-in-out;
   filter: grayscale(100%);
 }
-.project-wrapper .right-project img:hover {
+.project-container img:hover {
   filter: grayscale(0);
 }
-.project-wrapper h2 {
+
+h2 {
   color: var(--color-white);
   padding-left: 1rem;
   padding-top: 1rem;
@@ -383,7 +380,7 @@ section {
   text-transform: uppercase;
   font-size: 1.2rem;
 }
-.project-wrapper h2 span {
+h2 span {
   color: var(--color-secondary);
 }
 
