--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -7,10 +7,10 @@
   }
   
   :root {
-    --color-primary: #000;
+    --color-primary: #343434;
     --color-secondary: #e3b39b;
     --color-blue: #00094B;
-    --color-white: #fff;
+    --color-white: #EDEADE;
     --color-grey: #2a2e35;
     --color-grey2: #42413f;
     --br-sm-2: 14px;
@@ -147,9 +147,9 @@
     height: 100%;
     object-fit: cover;
     transition: all .4s ease-in-out;
-    filter: grayscale(100%);
+    filter: grayscale(0);
     &:hover {
-      filter: grayscale(0);
+      filter: grayscale(100%);
     }
   }
 }
@@ -163,23 +163,46 @@
   .name {
     margin: 0;
     padding: 0;
-    font-size: 3rem;
+    font-size: 2rem;
    span {
     color: var(--color-blue);
   }
+}
   p{
     margin: 1.5rem 0;
-    line-height: 4rem;
+    line-height: 2rem;
 }
   }
 }
-  }
-
+  
   /*--------------about-section----------------*/
   .about-wrapper{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5rem;
+    display: flex;
+    flex-direction: row;
+      
+      h1{
+        text-align: center;
+          text-transform: uppercase;
+          font-size: 3rem;
+          color: var(--color-white);
+          span{
+              color: var(--color-blue);
+          }
+      }
+      .left-about{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: -5rem;
+        padding-left: -4rem;
+        margin-top: 3rem;
+    p{
+      margin: 1.5rem 0;
+      line-height: 2rem;
+        color: var(--color-white);
+        text-align: left;
+    }
+  }
     .right-about{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -203,7 +226,7 @@
                 display: flex;
                 flex-direction: column;
                 .large-text{
-                    font-size: 3rem;
+                    font-size: 2rem;
                       
                 }
                 .small-text{
@@ -216,27 +239,6 @@
               }
             }
         }
-    
-    .left-about{
-      margin-top: 5rem;
-      margin-left: -4rem;
-            h1{
-              text-align: left;
-                position: relative;
-                text-transform: uppercase;
-                font-size: 3rem;
-                color: var(--color-white);
-                span{
-                    color: var(--color-blue);
-                }
-            }
-        p{
-          margin: 1.5rem 0;
-          line-height: 2rem;
-            color: var(--color-white);
-            text-align: left;
-        }
-      }
 }
 .about-stats{
     margin-left: -5rem;
@@ -298,7 +300,7 @@
 }
 .stats-title{
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 2rem;
     text-align: left;
     padding: 3rem 0;
@@ -318,15 +320,10 @@
 
 /*--------------projects-section----------------*/
 .project-wrapper{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5rem;
-    left-project{
-      margin-top: 5rem;
-      margin-left: -5rem;
-      float: left;
+    display: flex;
+    
             h1{
-              text-align: left;
+              text-align: center;
                 position: relative;
                 text-transform: uppercase;
                 font-size: 3rem;
@@ -342,7 +339,7 @@
             text-align: left;
         }
     }
-.right-project{ 
+.project-container{ 
   display: grid;
         grid-template-columns: repeat(2, 1fr);
         margin-top: 5rem;
@@ -383,7 +380,7 @@
                     color: var(--color-secondary);
                   }
   }
-}
+
 
 /*--------------contact-section----------------*/
 .contact-wrapper {
