--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -166,6 +166,7 @@
     font-size: 2rem;
    span {
     color: var(--color-blue);
+    font-size: 2rem;
   }
 }
   p{
@@ -177,25 +178,23 @@
   
   /*--------------about-section----------------*/
   .about-wrapper{
-    display: flex;
-    flex-direction: row;
-      
-      h1{
-        text-align: center;
-          text-transform: uppercase;
-          font-size: 3rem;
-          color: var(--color-white);
-          span{
-              color: var(--color-blue);
-          }
-      }
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5rem;
       .left-about{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         margin-left: -5rem;
         padding-left: -4rem;
-        margin-top: 3rem;
+        margin-top: 5rem;
+        h1{
+          text-align: left;
+          position: relative;
+            text-transform: uppercase;
+            font-size: 3rem;
+            color: var(--color-white);
+            span{
+                color: var(--color-blue);
+            }
+        }
     p{
       margin: 1.5rem 0;
       line-height: 2rem;
@@ -210,8 +209,8 @@
         margin-right: -15rem;;
         grid-gap: 2rem;
         .about-con{
-            border: 1px solid var(--color-grey);
-            border-radius: 5px;
+            border: 1px solid var(--color-blue);
+            border-radius: var(--br-sm-2);
             transition: all .4s ease-in-out;
             &:hover{
                 cursor: default;
@@ -320,8 +319,11 @@
 
 /*--------------projects-section----------------*/
 .project-wrapper{
-    display: flex;
-    
+  display: flex;
+  flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+  .main-title{ 
             h1{
               text-align: center;
                 position: relative;
@@ -339,13 +341,21 @@
             text-align: left;
         }
     }
+  }
 .project-container{ 
-  display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        margin-top: 5rem;
-        margin-right: -15rem;
-        float: right;
-        grid-gap: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        .project-con1,
+        .project-con2,
+        .project-con3,
+        .project-con4,
+        .project-con5,
+        .project-con6 {
+          flex: 0 0 calc(33.33% - 10px);
+          margin: 5px;
+        }
         .project-con{
           position: relative;
           border: 1px solid var(--color-grey);
@@ -362,22 +372,20 @@
     width: 100%;
     height: auto;
     transition: all .4s ease-in-out;
-    filter: grayscale(100%);
+    filter: grayscale(0);
     &:hover {
-      filter: grayscale(0);
+      filter: grayscale(100%);
     }
   }
   }
   h2{
     color: var(--color-white);
-                  padding-left: 1rem;
-                  padding-top: 1rem;
-                  position: relative;
-                  text-transform: uppercase;
-                  font-size: 1.2rem;
-                  
-                  span{
-                    color: var(--color-secondary);
+    padding-left: 1rem;
+    position: relative;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+      span{
+         color: var(--color-secondary);
                   }
   }
 
