--- a/my_styles/styling.scss
+++ b/my_styles/styling.scss
@@ -160,10 +160,12 @@
     justify-content: center;
     padding-left: 14rem;
     margin-top: 3rem;
+    
   .name {
     margin: 0;
     padding: 0;
     font-size: 2rem;
+    line-height: 2rem;
    span {
     color: var(--color-blue);
     font-size: 2rem;
@@ -176,164 +178,167 @@
   }
 }
   
-  /*--------------about-section----------------*/
-  .about-wrapper{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5rem;
-      .left-about{
-        margin-left: -5rem;
-        padding-left: -4rem;
-        margin-top: 5rem;
-        h1{
-          text-align: left;
-          position: relative;
-            text-transform: uppercase;
-            font-size: 3rem;
-            color: var(--color-white);
-            span{
-                color: var(--color-blue);
-            }
-        }
-    p{
-      margin: 1.5rem 0;
-      line-height: 2rem;
-        color: var(--color-white);
-        text-align: left;
-    }
-  }
-    .right-about{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        margin-top: 5rem;
-        margin-right: -15rem;;
-        grid-gap: 2rem;
-        .about-con{
-            border: 1px solid var(--color-blue);
-            border-radius: var(--br-sm-2);
-            transition: all .4s ease-in-out;
-            &:hover{
-                cursor: default;
-                transform: translateY(-5px);
-                border: 1px solid var(--color-grey2);
-            }
-        }
-            .abt-text{
-              justify-items: center;
-              align-items: center;
-                padding: 1.5rem;
-                display: flex;
-                flex-direction: column;
-                .large-text{
-                    font-size: 2rem;
-                      
-                }
-                .small-text{
-                  color: var(--color-secondary);
-                  padding-left: 1rem;
-                  position: relative;
-                  text-transform: uppercase;
-                  font-size: 1.2rem;
-                  letter-spacing: 2px;
-              }
-            }
-        }
+ /*--------------about-section----------------*/
+ .about-wrapper{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5rem;
+   .left-about{
+     margin-left: -5rem;
+     margin-top: 5rem;
+     h1{
+       text-align: left;
+       position: relative;
+       font-size: 3rem;
+       font-weight: 600;
+         text-transform: capitalize;
+         color: var(--color-white);
+         span{
+           color: var(--color-blue);
+         }
+     }
+ p{
+   margin: 1.5rem 0;
+   line-height: 2rem;
+   color: var(--color-white);
+   text-align: left;
+ }
 }
+ .right-about{
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     margin-top: 5rem;
+     margin-right: -15rem;;
+     grid-gap: 2rem;
+     .about-con{
+         border: 1px solid var(--color-grey2);
+         border-radius: var(--br-sm-2);
+         transition: all .4s ease-in-out;
+         &:hover{
+             cursor: default;
+             transform: translateY(-5px);
+             border: 1px solid var(--color-grey2);
+         }
+     }
+         .abt-text{
+           justify-items: center;
+           align-items: center;
+             padding: 1.5rem;
+             display: flex;
+             flex-direction: column;
+             .large-text{
+                 font-size: 2rem;
+             }
+             .small-text{
+               color: var(--color-secondary);
+               padding-left: 1rem;
+               position: relative;
+               text-transform: capitalize;
+               font-size: 1.2rem;
+               letter-spacing: 2px;
+           }
+         }
+     }
+}
+
 .about-stats{
-    margin-left: -5rem;
-    
-    padding-bottom: 4rem;
-    .progress-bars{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 2rem;
-        .progress-bar{
-            display: flex;
-            flex-direction: column;
-            .progress-title{
-                text-transform: uppercase;
-                font-weight: 500;
-            }
-            .progress-con{
-                display: flex;
-                align-items: center;
-                .progress-text{
-                    color: var(--color-secondary);
-                }
-                .progress{
-                    width: 100%;
-                    height: 0.45rem;
-                    background-color: var(--color-grey2);
-                    margin-left: 1rem;
-                    position: relative;
-                    span{
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        height: 100%;
-                        background-color: var(--color-grey);
-                        transition: all .4s ease-in-out;
-                    }
-                    .sass,
-                    .bootstrap {
-                        width: 80%;
-                    }
-                    .css, 
-                    .html {
-                        width: 90%;
-                    }
-                    .javascript,
-                    .jquery {
-                        width: 70%;
-                    }
-                    .react{
-                        width: 60%;
-                    }
-                    .redux{
-                      width: 50%;
-                  }
-                }
-            }
-        }
-    }
+ margin-left: -5rem;
+ 
+ padding-bottom: 4rem;
+ .progress-bars{
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     grid-gap: 2rem;
+     .progress-bar{
+         display: flex;
+         flex-direction: column;
+         .progress-title{
+             text-transform: capitalize;
+             font-weight: 500;
+         }
+         .progress-con{
+             display: flex;
+             align-items: center;
+             .progress-text{
+                 color: var(--color-secondary);
+             }
+             .progress{
+                 width: 100%;
+                 height: 0.45rem;
+                 background-color: var(--color-grey2);
+                 margin-left: 1rem;
+                 position: relative;
+                 span{
+                     position: absolute;
+                     top: 0;
+                     left: 0;
+                     height: 100%;
+                     background-color: var(--color-grey);
+                     transition: all .4s ease-in-out;
+                 }
+                 .sass,
+                 .bootstrap {
+                     width: 80%;
+                 }
+                 .css, 
+                 .html {
+                     width: 90%;
+                 }
+                 .javascript,
+                 .jquery {
+                     width: 70%;
+                 }
+                 .react{
+                     width: 60%;
+                 }
+                 .redux{
+                   width: 50%;
+               }
+             }
+         }
+     }
+ }
 }
 .stats-title{
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 2rem;
-    text-align: left;
-    padding: 3rem 0;
-    position: relative;
-    span{
-        color: var(--color-blue);
-    }
-    &::before{
-        content: '';
-        left: 50%;
-        top: 0;
-        width:40%;
-        height: 1px;
-        background-color: var();
-    }
+ text-transform: capitalize;
+ font-weight: 600;
+ font-size: 2rem;
+ text-align: left;
+ padding: 3rem 0;
+ position: relative;
+ span{
+     color: var(--color-blue);
+ }
+ &::before{
+     content: '';
+     left: 50%;
+     top: 0;
+     width:40%;
+     height: 1px;
+ }
 }
+
 
 /*--------------projects-section----------------*/
 .project-wrapper{
+  margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: center;
+  justify-content: space-around;
+  align-items: center;
   .main-title{ 
             h1{
               text-align: center;
                 position: relative;
-                text-transform: uppercase;
+                text-transform: capitalize;
                 font-size: 3rem;
+                font-weight: 600;
                 color: var(--color-white);
                 span{
                     color: var(--color-blue);
                 }
             }
+            
         p{
             line-height: 2rem;
             padding: 1rem;
@@ -343,24 +348,17 @@
     }
   }
 .project-container{ 
-  display: flex;
-  flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: center;
-        .project-con1,
-        .project-con2,
-        .project-con3,
-        .project-con4,
-        .project-con5,
-        .project-con6 {
-          flex: 0 0 calc(33.33% - 10px);
-          margin: 5px;
-        }
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 5rem;
         .project-con{
           position: relative;
-          border: 1px solid var(--color-grey);
+          border: 1px solid var(--color-grey2);
           border-radius: 5px;
           transition: all .4s ease-in-out;
+          height: 100%;
           &:hover{
               cursor: default;
               transform: translateY(-5px);
@@ -370,53 +368,65 @@
       
    img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
     transition: all .4s ease-in-out;
     filter: grayscale(0);
     &:hover {
       filter: grayscale(100%);
     }
   }
-  }
-  h2{
+
+  p{
     color: var(--color-white);
     padding-left: 1rem;
     position: relative;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-size: 1.2rem;
       span{
          color: var(--color-secondary);
                   }
   }
+}
 
+ 
 
 /*--------------contact-section----------------*/
 .contact-wrapper {
+  margin-top: 2rem;
   display: flex;
-  justify-content: space-between;
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 50px 0;
-    text-align: center;
-    
-.left-contact{
-  display: flex;
-    flex-direction: column;
-    justify-content: center;
-  h2 {
-    margin-bottom: 10px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+    .main-title3{
+      h1{
+        text-align: center;
+          position: relative;
+          text-transform: capitalize;
+          font-size: 3rem;
+          font-weight: 600;
+          color: var(--color-white);
+          span{
+              color: var(--color-blue);
+          }
+      }
+      
+  p{
+      line-height: 2rem;
+      padding: 1rem;
+      color: var(--color-white);
+      text-align: left;
   }
 }
-.right-contact{ 
+
+    }
+.contact-info{
   display: flex;
     flex-direction: column;
     justify-content: center;
-  width: 50%;
-  background-color: var(--color-white);
- h2 {
-  margin-bottom: 10px;
+    margin-top: 3rem;
 }
+
 .form-group {
   margin-bottom: 20px;
  label{
@@ -432,8 +442,8 @@ textarea{
   font-size: 16px;
 }
 }
-}
-}
+
+
 
 /*--------------independent-component----------------*/
 .btn-con{
@@ -446,7 +456,7 @@ textarea{
     color: inherit;
     font-weight: 600;
     position: relative;
-    border: 1px solid var(--color-blue);
+    border: 1px solid var(--color-grey2);
     display: flex;
     align-self: flex-start;
     display: flex;
